--- a/Node.js com Bancos de Dados Relacionais (SQL)/package.json
+++ b/Node.js com Bancos de Dados Relacionais (SQL)/package.json
@@ -14,11 +14,13 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.7.11",
+    "@types/pg": "^8.6.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.2"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "http-status-codes": "^2.1.4"
+    "http-status-codes": "^2.1.4",
+    "pg": "^8.7.1"
   }
 }
